# magnum-bootstrap

modules/: FindCorrade.cmake
src/: CMakeLists.txt  MyApplication.cpp  MyApplication.html  MyApplication.nmf
